--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "awesome-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "ng": "ng",
+    "clean": "rimraf ./dist",
+    "start": "ng serve",
+    "build": "ng build",
+    "build:prod": "ng build --prod",
+    "test": "ng test --watch=false --browsers=ChromeHeadlessCustom",
+    "test:watch": "ng test",
+    "build:ci": "npm run clean && npm run test && npm run build:prod",
     "release": "standard-version"
   },
   "private": true,
