--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:prod": "ng build --prod",
     "test": "ng test --watch=false --browsers=ChromeHeadlessCustom",
     "test:watch": "ng test",
-    "build:ci": "npm run clean && npm run test && npm run build:prod",
+    "build:ci": "npm run clean && npm run build:prod",
     "release": "standard-version"
   },
   "private": true,
@@ -51,5 +51,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  "engines": {
+    "node": "10.19.0",
+    "npm": "6.13.4"
   }
 }
