--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,13 +23,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x]
+        node: [10,11,12]
     steps:
     - uses: actions/checkout@v1
-    - name: Node $
+    - name: Node ${{ matrix.node }}
       uses: actions/setup-node@v1
       with:
-        node-version: $
+        node-version: ${{ matrix.node }}
     - name: npm install and npm run build
       run: |
         npm run build
@@ -38,13 +38,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x]
+        node: [10,11,12]
     steps:
     - uses: actions/checkout@v1
-    - name: Node $
+    - name: Node ${{ matrix.node }}
       uses: actions/setup-node@v1
       with:
-        node-version: $
+        node-version: ${{ matrix.node }}
     - name: npm install and npm run build
       run: |
         npm ci
