--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,16 +23,23 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [10,11,12]
+        node-version: [8.x, 10.x, 12.x]
     steps:
     - uses: actions/checkout@v1
-    - name: Node ${{ matrix.node }}
+    - name: Cache node modules
+      uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+    - name: Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node }}
-    - name: npm install -g @angular/ci, npm install and npm run build
+        node-version: ${{ matrix.node-version }}
+    - name: npm install -g @angular/cli, npm install and npm run build
       run: |
-        npm install -g @angular/ci
+        npm install -g @angular/cli
         npm install
         npm run build
   Build:
@@ -40,15 +47,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [10,11,12]
+        node-version: [8.x, 10.x, 12.x]
     steps:
     - uses: actions/checkout@v1
-    - name: Node ${{ matrix.node }}
+    - name: Cache node modules
+      uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+    - name: Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node }}
-    - name: npm install -g @angular/ci, npm install and npm run build
+        node-version: ${{ matrix.node-version}}
+    - name: npm install -g @angular/cli, npm install and npm run build
       run: |
-        npm install -g @angular/ci
+        npm install -g @angular/cli
         npm ci
         npm run build:ci
