--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "awesomeApp": {
+    "google-oauth-com-angular-fire-app": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/awesomeApp",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "awesomeApp:build"
+            "browserTarget": "google-oauth-com-angular-fire-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "awesomeApp:build:production"
+              "browserTarget": "google-oauth-com-angular-fire-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "awesomeApp:build"
+            "browserTarget": "google-oauth-com-angular-fire-app:build"
           }
         },
         "test": {
@@ -110,18 +110,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "awesomeApp:serve"
+            "devServerTarget": "google-oauth-com-angular-fire-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "awesomeApp:serve:production"
+              "devServerTarget": "google-oauth-com-angular-fire-app:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "awesomeApp",
+  "defaultProject": "google-oauth-com-angular-fire-app",
   "cli": {
     "analytics": "51dbdd18-bdc2-47ae-9b82-52115e389d15"
   }
