--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:watch": "ng test",
     "build:ci": "npm run clean && npm run build:prod",
     "release": "standard-version",
-    "firebase:serve": "firebase serve --only hosting"
+    "firebase:serve": "firebase serve --only hosting",
+    "firebase:deploy": "firebase serve --only hosting"
   },
   "private": true,
   "dependencies": {
