--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:ci": "npm run clean && npm run build:prod",
     "release": "standard-version",
     "firebase:serve": "firebase serve --only hosting",
-    "firebase:deploy": "firebase serve --only hosting"
+    "firebase:deploy": "rm -rf dist && ng build --prod && firebase deploy"
   },
   "private": true,
   "dependencies": {
